# agentic-ai

./: README.md
week1/vibeCodingProject/: .env.example  .gitignore  README.md  app.py  calendar_export.py  extractor.py  models.py  pyproject.toml  requirements.txt  sample_chat.txt  viz.py
week1/vibeCodingProject/future-feature-ideas/: 01-screenshot-image-input.md  02-conversational-ai-editor.md  03-navigable-multi-week-calendar.md  README.md
